# METplotpy

./: .gitignore  README.md  genindex.html  index.html  installation.html  metplus_calc_plot.yaml  metplus_calc_plot_debian.yaml  nco_requirements.txt  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  versions.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md  new_feature_request.md  sub-issue.md  task.md
.github/jobs/: configure_sonarqube.sh
.github/workflows/: audit.yaml  documentation.yaml  documentation.yml  main.yml  requirements.txt  sonarqube.yaml  sonarqube.yml  trigger_metplus.yml  unit_tests.yaml  vulnerabilities.yaml
_downloads/3e08554c9c7aa38649683a482b0f16a4/: plot_sample.ipynb
_sources/: installation.rst.txt
_sources/examples/: index.rst.txt
develop/: genindex.html  index.html  objects.inv  search.html  searchindex.js
develop/Users_Guide/: index.html  installation.html  release-notes.html
develop/_sources/: index.rst.txt
develop/doctrees/: environment.pickle  index.doctree
develop/examples/: index.html
develop/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/: Makefile  conf.py  copyright.txt  index.rst  installation.rst  version
docs/Contributors_Guide/: coding_standards.rst  conda_environment.rst  github_repository.rst  index.rst  new_plot.rst  (+5 more)
examples/: README.txt  index.html
metplotpy/: README  README.md  __init__.py
proto/: dependency.py  proto.py  proto.yaml
src/: README
test/: conftest.py  run_all_nco.sh
(+665 files in other folders)
